--- a/.github/workflows/rsync.yaml
+++ b/.github/workflows/rsync.yaml
@@ -11,15 +11,14 @@ jobs:
 
     steps:
       - name: Checkout Repo
-        run: ls
-      #   uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
-      # - name: Deploy to Server
-      #   uses: easingthemes/ssh-deploy@main
-      #   with:
-      #     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     ARGS: "-avz -i"
-      #     SOURCE: "."
-      #     REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-      #     REMOTE_USER: ${{ secrets.REMOTE_USER }}
-      #     REMOTE_TARGET: ${{ secrets.REMOTE_TARGET }}
+      - name: Deploy to Server
+        uses: easingthemes/ssh-deploy@main
+        with:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          ARGS: "-avz -i"
+          SOURCE: "."
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          REMOTE_TARGET: ${{ secrets.REMOTE_TARGET }}
