--- a/.github/workflows/rsync.yaml
+++ b/.github/workflows/rsync.yaml
@@ -17,9 +17,9 @@ jobs:
         uses: easingthemes/ssh-deploy@main
         with:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ARGS: "-avz -i --delete"
-          SOURCE: "."
+          ARGS: "-avz -i"
+          SOURCE: "dist/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
-          EXCLUDE: ".git/, .github/"
+          # EXCLUDE: ".git/, .github/"
