--- a/.github/workflows/rsync.yaml
+++ b/.github/workflows/rsync.yaml
@@ -13,6 +13,17 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.x"
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         with:
