--- a/.github/workflows/rsync.yaml
+++ b/.github/workflows/rsync.yaml
@@ -33,4 +33,5 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
-          # EXCLUDE: ".git/, .github/"
+          SCRIPT_BEFORE: |
+            rm -rf assets/
