--- a/.github/workflows/rsync.yaml
+++ b/.github/workflows/rsync.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: easingthemes/ssh-deploy@main
         with:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ARGS: "-avz -i --delete"
+          ARGS: "-avz -i"
           SOURCE: "dist/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
