--- a/.github/workflows/rsync.yaml
+++ b/.github/workflows/rsync.yaml
@@ -34,4 +34,4 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
           SCRIPT_BEFORE: |
-            /home/delete_old_assets.sh
+            /home/${{ secrets.REMOTE_USER }}/delete_old_assets.sh
